static/style.css
* {
	box-sizing: border-box;
}

:root {
	--background: #fff;
	--background-secondary: #eee;
	--border-width: 3px;
	--foreground: #222;
	--node-width: 10rem;
	--spacing: 1rem;
}

.hl-constant {
	color: #5994df;
}
.hl-method-call {
	color: #ecdea3;
}
.hl-field {
	color: #6bb8e3;
}
.hl-keyword {
	color: #c279c8;
	font-weight: bold;
}
.hl-string-or-char-literal {
	color: #e68965;
}
.hl-number-literal {
	color: #afc8a1;
}
.hl-comment {
	color: #548641;
}

@media (prefers-color-scheme: dark) {
	:root {
		--background: #222;
		--background-secondary: #292929;
		--foreground: #ddd;
	}

	a:link {
		color: #5e9d9f;
	}
	a:visited {
		color: #a589c1;
	}
	a:active {
		color: #8d6ab0;
	}

	.hl-constant {
		color: #286cc1;
	}
	.hl-method-call {
		color: #8a720d;
	}
	.hl-field {
		color: #116493;
	}
	.hl-keyword {
		color: #a03fa8;
		font-weight: bold;
	}
	.hl-string-or-char-literal {
		color: #a44420;
	}
	.hl-number-literal {
		color: #508831;
	}
	.hl-comment {
		color: #336620;
	}
}

body {
	background: var(--background);
	color: var(--foreground);
	font-family: sans-serif;
	margin: 0;
	min-height: 100vh;
	width: 100vw;
}

.row-container {
	display: flex;
	flex-direction: row;
	justify-content: stretch;
	gap: var(--spacing);
}

.row-container > div {
	flex: 1;
	position: relative;
}

.highlight-table {
	white-space: pre;
	font-family: monospace;
}

.hl-line {
	padding-right: 1rem;
	text-align: right;
	user-select: none;
}

